# tasker_cli

./: LICENSE  README.md  pyproject.toml  setup.py
examples/: failing.py  simple.py  subtask.py
tasker_cli/: __init__.py  table.py  task.py
